# MicrocontrollerTamagotchi

./: .gitignore  .gitmodules  CMakeLists.txt  Display.hpp  README.md  Tamagotchi.cpp  Tamagotchi.hpp  bitmaps.hpp  main.cpp  platformio.ini
build_raylib/: CMakeCache.txt  Makefile  build_cmake.sh  cmake_install.cmake
build_raylib/raylib/: Makefile  cmake_install.cmake  pico_tamagotchi
pico/: CMakeLists.txt  Display.hpp  main.cpp
raylib/: CMakeLists.txt  RaylibDisplay.cpp  RaylibDisplay.hpp  main.cpp
src/: globals.h  main.cpp
src/Games/: brick_breaker.cpp  brick_breaker.hpp  sheep_jump.cpp  sheep_jump.hpp  snake.cpp  snake.hpp
src/Tamagotchi/: Tamagotchi-SH1106.cpp  Tamagotchi-SH1106.hpp  Tamagotchi.cpp  Tamagotchi.hpp  bitmaps.cpp  bitmaps.hpp  bitmaps_6x7.hpp
src/utility/: button_interface.cpp  button_interface.hpp  m4_utility.cpp  m4_utility.hpp
utils/: convert1bitBMP  convert1bitBMP.cpp  convertBMP  convertBMP.cpp  convertBMPFolder  convertBMPFolder.cpp  egg_uncracked.txt
